--- a/package.json
+++ b/package.json
@@ -15,17 +15,25 @@
   "dependencies": {
     "@clerk/nextjs": "^6.5.0",
     "@clerk/themes": "^2.1.48",
+    "@mantine/hooks": "^7.14.3",
     "@neondatabase/serverless": "^0.10.3",
+    "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-scroll-area": "^1.2.1",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@react-three/drei": "^9.120.0",
+    "@react-three/fiber": "^8.17.10",
     "@stripe/stripe-js": "^5.2.0",
+    "@types/three": "^0.170.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
@@ -35,11 +43,13 @@
     "next": "14.2.16",
     "next-themes": "^0.4.3",
     "react": "^18",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18",
     "stripe": "^17.4.0",
     "svix": "^1.41.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.171.0",
     "vaul": "^1.1.1"
   },
   "devDependencies": {
