--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
@@ -33,6 +34,7 @@
     "@react-three/drei": "^9.120.0",
     "@react-three/fiber": "^8.17.10",
     "@stripe/stripe-js": "^5.2.0",
+    "@types/opentype.js": "^1.3.8",
     "@types/three": "^0.170.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -42,6 +44,7 @@
     "lucide-react": "^0.460.0",
     "next": "14.2.16",
     "next-themes": "^0.4.3",
+    "opentype.js": "^1.3.4",
     "react": "^18",
     "react-colorful": "^5.6.1",
     "react-dom": "^18",
