--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.5.0",
     "@clerk/themes": "^2.1.48",
+    "@hookform/resolvers": "^3.9.1",
     "@mantine/hooks": "^7.14.3",
     "@neondatabase/serverless": "^0.10.3",
     "@radix-ui/react-accordion": "^1.2.1",
@@ -36,6 +37,7 @@
     "@stripe/stripe-js": "^5.2.0",
     "@types/opentype.js": "^1.3.8",
     "@types/three": "^0.170.0",
+    "@uploadthing/react": "^7.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
@@ -48,12 +50,15 @@
     "react": "^18",
     "react-colorful": "^5.6.1",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.0",
     "stripe": "^17.4.0",
     "svix": "^1.41.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.171.0",
-    "vaul": "^1.1.1"
+    "uploadthing": "^7.4.0",
+    "vaul": "^1.1.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20",
