--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@react-three/drei": "^9.120.0",
     "@react-three/fiber": "^8.17.10",
     "@stripe/stripe-js": "^5.2.0",
+    "@types/mixpanel": "^2.14.9",
     "@types/opentype.js": "^1.3.8",
     "@types/three": "^0.170.0",
     "@uploadthing/react": "^7.1.2",
@@ -44,6 +45,7 @@
     "drizzle-orm": "^0.36.4",
     "drizzle-zod": "^0.5.1",
     "lucide-react": "^0.460.0",
+    "mixpanel": "^0.18.0",
     "next": "14.2.16",
     "next-themes": "^0.4.3",
     "opentype.js": "^1.3.4",
