--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@react-three/drei": "^9.120.0",
     "@react-three/fiber": "^8.17.10",
+    "@sentry/nextjs": "^8.45.0",
     "@stripe/stripe-js": "^5.2.0",
     "@types/mixpanel": "^2.14.9",
     "@types/opentype.js": "^1.3.8",
