--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@clerk/themes": "^2.1.48",
     "@hookform/resolvers": "^3.9.1",
     "@mantine/hooks": "^7.14.3",
-    "@neondatabase/serverless": "^0.10.3",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -38,10 +37,12 @@
     "@react-three/fiber": "^8.17.10",
     "@sentry/nextjs": "^8.45.0",
     "@stripe/stripe-js": "^5.2.0",
+    "@types/better-sqlite3": "^7.6.12",
     "@types/mixpanel": "^2.14.9",
     "@types/opentype.js": "^1.3.8",
     "@types/three": "^0.170.0",
     "@uploadthing/react": "^7.1.2",
+    "better-sqlite3": "^11.7.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
